--- a/contact-me.html
+++ b/contact-me.html
@@ -9,26 +9,24 @@
 
 <body>
 
-<h1><strong>AASHNA ANAND </strong></h1>
+<h1>AASHNA ANAND</h1>
 
 <table class="table1">
   <tr>
-<strong>
-   <td><b><a href = "about-me.html">About Me</b></td>
-<td><a href = "academics.html">Academics</a></td>
- <td><a href = "projects.html">Projects</b></td>
-  <td><b>Contact Me</b></td>
-</strong>
+<td><b><a href="about-me.html">About Me</b></td>
+<td><a href="academics.html">Academics</a></td>
+<td><a href="projects.html">Projects</b></td>
+<td><b>Contact Me</b></td>
     
   </tr>
 </table>
 
-<h2>Find me here </h2>
+<h2>Find me here</h2>
 
 <p>
-<p><b>Facebook </b> <a href = "https://www.facebook.com/komal.bce"> https://www.facebook.com/komal.bce </a></b> <br /></p>
-<p><b>Linkedin  </b> <a href = "https://www.facebook.com/komal.bce"> https://www.facebook.com/komal.bce </a></b> <br /></p>
-<p><b>Github    </b> <a href = "https://github.com/coderaashna"> https://github.com/coderaashna </a></b> <br /></p>
+<p><b>Facebook </b> <a href = "https://www.facebook.com/komal.bce">https://www.facebook.com/komal.bce</a></b> <br /></p>
+<p><b>Linkedin  </b> <a  href="https://www.linkedin.com/in/aashna-anand-5b6229111/">https://www.linkedin.com/in/aashna-anand-5b6229111/</a></b> <br /></p>
+<p><b>Github    </b> <a href = "https://github.com/coderaashna">https://github.com/coderaashna </a></b> <br /></p>
   
 
 </body>
